--- a/src/app/pages/(protect)/dashboard/dashboard.html
+++ b/src/app/pages/(protect)/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div class="pb-14">
+<div class="pb-14 pt-8">
   <div class="gap-4 grid lg:grid-cols-3 lg:grid-rows-2 mt-8 sm:mt-8">
     <div class="relative lg:row-span-2">
       <div class="absolute inset-px bg-gray-100 dark:bg-gray-800 rounded-lg lg:rounded-l-4xl"></div>
